fix: automatically add files to xcode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Build in Xcode",
       "type": "node-terminal",
       "request": "launch",
-      "command": "/Users/star/xcode.rb",
+      "command": "/Users/star/Downloads/xcode.rb", // use a better folder path
       "cwd": "${workspaceFolder}",
       "presentation": {
         "reveal": "never",
